--- a/memory_cards/templates/navbar.html
+++ b/memory_cards/templates/navbar.html
@@ -9,7 +9,7 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8000/cards">Cards<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="http://localhost:8000/cards">Decks<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="http://localhost:8000/cards/add_deck">Add deck<span class="sr-only">(current)</span></a>
