--- a/memory_cards/cards/templates/cards/decks.html
+++ b/memory_cards/cards/templates/cards/decks.html
@@ -4,6 +4,14 @@
 
 
 <h1>Decks</h1>
+
+<form method="post" action="add_deck_form" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input name="name" placeholder="name">
+    <button class="btn btn-primary" type="submit">Add</button>
+
+</form>
+
 <table class="table table-striped table-bordered table-sm" cellspacing="0">
     <thead>
         <tr>
