--- a/memory_cards/cards/templates/cards/decks.html
+++ b/memory_cards/cards/templates/cards/decks.html
@@ -9,9 +9,12 @@
     {% csrf_token %}
     <input name="name" placeholder="name">
     <button class="btn btn-primary" type="submit">Add</button>
-
 </form>
-
+{% if messages %}
+   {% for message in messages %}
+   <div class={{ message.tags }}>{{ message }}</div>
+   {% endfor %}
+{% endif %}
 <table class="table table-striped table-bordered table-sm" cellspacing="0">
     <thead>
         <tr>
