--- a/memory_cards/cards/templates/cards/cards.html
+++ b/memory_cards/cards/templates/cards/cards.html
@@ -9,6 +9,11 @@
     <input name="association_text" placeholder="association"><br>
     <button class="btn btn-primary" type="submit">Add</button>
 </form>
+{% if messages %}
+   {% for message in messages %}
+   <div class={{ message.tags }}>{{ message }}</div>
+   {% endfor %}
+{% endif %}
 
 <h1>Cards</h1>
 <table class="table table-striped table-bordered table-sm" cellspacing="0">
@@ -22,8 +27,9 @@
     {% for card in cards %}
         <tr>
             <td>
-                <a class="btn btn-lg btn-danger" href="http://localhost:8000/cards/cards?q={{deck.id}}">{{card.question_text}}</a>
+                <a class="btn btn-lg btn-danger" href="card?q={{card.id}}">{{card.question_text}}</a>
             </td>
+            <td><a class="btn btn-warning" href=delete_card/{{card.question_text}}>delete</a></td>
         </tr>
     {% endfor %}
     </tbody>
