--- a/memory_cards/templates/index.html
+++ b/memory_cards/templates/index.html
@@ -10,6 +10,12 @@ integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNm
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css">
     <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+<!--    <style>-->
+<!--        input{-->
+<!--            width: 500px;-->
+<!--        }-->
+<!--    </style>-->
+
 <!--    <script>-->
 <!--    $(document).ready(function() {-->
 <!--        $('[data-toggle="popover"]').popover({-->
