add edit while learning

--- a/memory_cards/cards/templates/cards/log_card.html
+++ b/memory_cards/cards/templates/cards/log_card.html
@@ -16,5 +16,6 @@
         <button name="answer" class="btn btn-success" type="submit" value="yes">Yes</button>
         <button name="answer" class="btn btn-danger" type="submit" value="no">No</button>
     </div>
+    <a class="btn btn-lg btn-danger" href="edit_card?q={{learn_card.id}}">Edit</a>
 </form>
 {% endblock %}
