--- a/memory_cards/cards/templates/cards/log_card.html
+++ b/memory_cards/cards/templates/cards/log_card.html
@@ -10,6 +10,7 @@
         <details>
           <summary>Answer</summary>
           <p>{{learn_card.0.answer_text}}</p>
+          <p>{{learn_card.2}}</p>
           association:<textarea class="form-control" name="association_text" rows="5">{{learn_card.0.association_text}}</textarea><br>
         </details>
         <button name="answer" class="btn btn-success" type="submit" value="yes">Yes</button>
