--- a/memory_cards/templates/navbar.html
+++ b/memory_cards/templates/navbar.html
@@ -10,6 +10,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="http://localhost:8000/cards">Decks<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8000/cards/learn_model">Save Model<span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </div>
 </nav>
