add search cards

--- a/memory_cards/templates/navbar.html
+++ b/memory_cards/templates/navbar.html
@@ -11,6 +11,9 @@
                 <a class="nav-link" href="http://localhost:8000/cards">Decks<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8000/cards/search_card">Search Card<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="http://localhost:8000/cards/learn_model">Save Model<span class="sr-only">(current)</span></a>
             </li>
         </ul>
